<resources>
    <string name="app_name">KWH-Wallet</string>
    <string name="kwh">KWH</string>
    <string name="login">Login</string>
    <string name="username">Full Name</string>
    <string name="password">Password</string>
    <string name="re_password">Ulangi Password</string>
    <string name="input_pin">masukan Pin</string>
    <string name="belum_punya_akun_daftar">Belum punya akun? Daftar</string>
    <string name="sudah_punya_akun_masuk">sudah punya akun? Masuk</string>
    <string name="disini">Disini</string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <string name="kukuh_wayan_handi">Kukuh Wayan Handi</string>
    <string name="masukan_nomor_ponsel">Masukkan id / nomor ponsel</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
</resources>
