<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="#414141">

        <LinearLayout
            android:id="@+id/container1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:layout_gravity="center_horizontal|center_vertical"
            >

            <TextView
                android:id="@+id/TextViewBottomTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/kwh"
                android:textColor="@color/colorWhite"
                android:textSize="40sp"
                android:drawableStart="@drawable/kwh_wallet_logo"
                android:scaleX="0.7"
                android:scaleY="0.7"/>

            <TextView
                android:id="@+id/LoginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorWhite"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_height="0dp"
            android:layout_weight="0.8">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/username"
                android:inputType="textAutoCorrect"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:id="@+id/container2.1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="top">

                <TextView
                    android:id="@+id/signuptext"
                    android:text="@string/belum_punya_akun_daftar"
                    android:layout_width="0dp"
                    android:layout_weight="0.88"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:id="@+id/HyperlinkDaftar"
                    android:text="@string/disini"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/colorHyperlink"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="5dp"
                    android:clickable="true"
                    android:focusable="true"/>
            </LinearLayout>

            <Button
                android:id="@+id/dbmhs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat"
                android:background="@color/colorHyperlink"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container3"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="bottom"
            >

            <TextView
                android:id="@+id/copyrightProject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/_169_kwh"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/copyrightLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/kukuh_wayan_handi"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorWhite"
                android:textSize="10sp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>